fix: 🐛 avoid menu shift

--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -27,7 +27,7 @@
 }
 
 .container {
-  width: 100%;
+  width: 100vw;
 
   z-index: 200;
   background-color: var(--background-color);
